<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <com.tuyenmonkey.mkloader.MKLoader
        android:id="@+id/adminLoader"
        android:layout_width="wrap_content"
        app:mk_type="Whirlpool"
        app:mk_color="#C600B7FF"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:layout_height="wrap_content"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/home_bg" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adminHeritageNameTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adminHeritageName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/heritage_name" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/adminSelectImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border"
                android:text="@string/select_image"
                android:textAllCaps="false"
                android:textColor="@color/intro_desc" />





            <Button
                android:id="@+id/adminUploadImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border"
                android:text="@string/upload_image"
                android:textAllCaps="false"
                android:textColor="@color/intro_desc" />
            <Button
                android:id="@+id/adminSelectGLB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border"
                android:text="@string/select_glb"
                android:textAllCaps="false"
                android:textColor="@color/intro_desc" />
            <Button
                android:id="@+id/adminUploadGLB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border"
                android:text="@string/upload_glb"
                android:textAllCaps="false"
                android:textColor="@color/intro_desc" />

            <Button
                android:id="@+id/adminUpdateDatabase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border"
                android:text="@string/update_database"
                android:textAllCaps="false"
                android:textColor="@color/intro_desc" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>