<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    tools:context=".fragments.introduction.IntroFragment1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/worldImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/explore_the_world"
            android:elevation="10dp"
            android:src="@drawable/hat" />
    <!--    <TextView
            android:id="@+id/introThreeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:drawableEnd="@drawable/next_arrow"
            android:text="@string/start"
            android:textColor="@color/intro_skip"
            android:textSize="25sp" />-->

        <TextView
            android:id="@+id/heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/worldImage"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            android:text="@string/adventure"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heading1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            android:text="@string/want"
            android:textColor="@color/intro_desc"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/heading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heading2"
            android:layout_marginStart="20dp"
            android:elevation="10dp"
            android:text="@string/travel"
            android:textColor="@color/intro_desc"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/slider_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading3"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/intro3_img_page1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/page_unselected" />

            <ImageView
                android:id="@+id/intro3_img_page2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/page_unselected" />

            <ImageView
                android:id="@+id/intro3_img_page3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/page_selected" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/slider_dots"
            android:layout_marginTop="20dp"
            android:background="@drawable/intro_three" />

        <Button
            android:id="@+id/btnIntroThreeBack"
            android:layout_width="@dimen/intro_button"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/border"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnIntroThreeStart"
            android:layout_width="@dimen/intro_button"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/border"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </RelativeLayout>


</FrameLayout>